<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@color/color_white"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/img_back"
            android:background="@mipmap/ic_delete"
            android:layout_width="@dimen/margin_25dp"
            android:layout_height="@dimen/margin_25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin_15dp"
            android:layout_marginStart="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_telLogin"
            android:textSize="@dimen/text_size_25sp"
            android:textColor="@color/color_black"
            android:text="@string/tel_login"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_15dp"
            android:layout_marginTop="@dimen/margin_40dp"
            app:layout_constraintTop_toBottomOf="@+id/img_back"/>

    <Button
            android:id="@+id/btn_country"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_65dp"
            android:layout_marginTop="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_15dp"
            android:layout_marginEnd="@dimen/margin_15dp"
            android:background="@null"
            android:text="@string/country"
            android:gravity="left|center"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_telLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/tv_phone"
            android:text="@string/phone"
            android:textSize="@dimen/text_size_20sp"
            android:textColor="@color/color_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_country"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_15dp"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/et_phone"
            android:maxLength="11"
            android:maxLines="1"
            android:textColor="@color/color_black"
            android:textSize="@dimen/text_size_23sp"
            android:hint="@string/input_hint_phone"
            android:background="@null"
            app:layout_constraintTop_toTopOf="@+id/tv_phone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_phone"
            app:layout_constraintStart_toEndOf="@+id/tv_phone"
            android:layout_marginStart="@dimen/margin_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin_15dp"/>

    <View
            android:id="@+id/line"
            android:background="@color/color_f3f4f8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            tools:layout_editor_absoluteX="0dp"
            android:layout_marginTop="@dimen/margin_15dp"
            android:layout_marginEnd="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_15dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone"/>

    <TextView
            android:id="@+id/tv_otherLogin"
            android:text="@string/other_login"
            android:textSize="@dimen/text_size_20sp"
            android:layout_marginStart="@dimen/margin_15dp"
            android:layout_marginEnd="@dimen/margin_15dp"
            android:layout_marginTop="@dimen/margin_15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/line"/>
    <Button
            android:text="@string/login_next"
            android:textSize="@dimen/text_size_20sp"
            android:textColor="@color/color_f5f5f5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_next"
            android:background="@drawable/btn_login_next_background"
            android:layout_marginTop="@dimen/margin_25dp"
            android:layout_marginEnd="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_15dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_otherLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>


</android.support.constraint.ConstraintLayout>