<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/item_newFriend"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/color_white">

        <ImageView
            android:id="@+id/img_newFriend"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="15dp"
            android:background="@mipmap/img_def_avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_newFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/new_friend"
            android:textColor="@color/color_black"
            android:textSize="@dimen/text_size_18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_newFriend"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/item_groupChat"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/color_white">

        <ImageView
            android:id="@+id/img_groupChat"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="15dp"
            android:background="@mipmap/img_def_avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_groupChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/group_chat"
            android:textColor="@color/color_black"
            android:textSize="@dimen/text_size_18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_groupChat"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/item_label"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/color_white">

        <ImageView
            android:id="@+id/img_label"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="15dp"
            android:background="@mipmap/img_def_avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/label"
            android:textColor="@color/color_black"
            android:textSize="@dimen/text_size_18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_label"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/item_number"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/color_white">

        <ImageView
            android:id="@+id/img_number"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="15dp"
            android:background="@mipmap/img_def_avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/number"
            android:textColor="@color/color_black"
            android:textSize="@dimen/text_size_18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_number"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</LinearLayout>