<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_f3f4f8"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/ll_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/item_header"
                android:background="@color/color_white"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_150">

                <ImageView
                    android:id="@+id/img_avatar"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginBottom="30dp"
                    android:background="@mipmap/img_def_avatar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:text="微信名称"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_size_18sp"
                    app:layout_constraintStart_toEndOf="@+id/img_avatar"
                    app:layout_constraintTop_toTopOf="@+id/img_avatar" />

            </android.support.constraint.ConstraintLayout>


            <android.support.constraint.ConstraintLayout
                android:id="@+id/item_play"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:background="@color/color_white">

                <ImageView
                    android:id="@+id/img_play"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="15dp"
                    android:background="@mipmap/img_def_avatar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/play"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_size_18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_play"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/item_collect"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@color/color_white">

                <ImageView
                    android:id="@+id/img_collect"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="15dp"
                    android:background="@mipmap/img_def_avatar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_collect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/collect"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_size_18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_collect"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/item_album"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="1dp"
                android:background="@color/color_white">

                <ImageView
                    android:id="@+id/img_album"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="15dp"
                    android:background="@mipmap/img_def_avatar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/album"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_size_18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_album"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/item_card"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="1dp"
                android:background="@color/color_white">

                <ImageView
                    android:id="@+id/img_card"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="15dp"
                    android:background="@mipmap/img_def_avatar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/card_pag"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_size_18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_card"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
            android:id="@+id/item_expression"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="1dp"
            android:background="@color/color_white">

            <ImageView
                android:id="@+id/img_expression"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="15dp"
                android:background="@mipmap/img_def_avatar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_expression"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/expression"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_size_18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_expression"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/item_homePage"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="1dp"
                android:background="@color/color_white">

                <ImageView
                    android:id="@+id/img_homePage"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="15dp"
                    android:background="@mipmap/img_def_avatar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_homePage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/me_home_pager"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_size_18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_homePage"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/item_set"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="10dp"
                android:background="@color/color_white">

                <ImageView
                    android:id="@+id/img_set"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="15dp"
                    android:background="@mipmap/img_def_avatar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/set"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_size_18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_set"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>