<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/ll_bottom"
            app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout
            android:id="@+id/ll_bottom"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent">
        <View
                android:id="@+id/bottom_line"
                android:background="#ccc"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        <LinearLayout
                android:id="@+id/bottom_navigation"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <android.support.constraint.ConstraintLayout
                    android:id="@+id/navigation_chat"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                <ImageView
                        android:layout_width="@dimen/width_25dp"
                        android:layout_height="@dimen/height_23dp"
                        android:background="@mipmap/message_normal"
                        android:id="@+id/img_chat"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="5dp"/>
                <TextView
                        android:id="@+id/tv_chat"
                        android:text="@string/wx"
                        android:gravity="center"
                        android:textSize="@dimen/text_size_13sp"
                        android:textColor="@color/color_black"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/dp_8"
                        app:layout_constraintTop_toBottomOf="@+id/img_chat"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toEndOf="parent"
                />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                    android:id="@+id/navigation_contact"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                <ImageView
                        android:layout_width="@dimen/width_25dp"
                        android:layout_height="@dimen/height_23dp"
                        android:background="@mipmap/contacts_normal"
                        android:id="@+id/img_contact"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="5dp"/>
                <TextView
                        android:id="@+id/tv_contact"
                        android:text="@string/contact"
                        android:gravity="center"
                        android:textSize="@dimen/text_size_13sp"
                        android:textColor="@color/color_black"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/dp_8"
                        app:layout_constraintTop_toBottomOf="@+id/img_contact"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toEndOf="parent"
                />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                    android:id="@+id/navigation_discover"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <ImageView
                        android:layout_width="@dimen/width_25dp"
                        android:layout_height="@dimen/height_23dp"
                        android:background="@mipmap/discovery_normal"
                        android:id="@+id/img_discover"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="5dp"/>
                <TextView
                        android:id="@+id/tv_discover"
                        android:text="@string/discover"
                        android:gravity="center"
                        android:textSize="@dimen/text_size_13sp"
                        android:textColor="@color/color_black"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/dp_8"
                        app:layout_constraintTop_toBottomOf="@+id/img_discover"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toEndOf="parent"
                />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                    android:id="@+id/navigation_me"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                <ImageView
                        android:layout_width="@dimen/width_25dp"
                        android:layout_height="@dimen/height_23dp"
                        android:background="@mipmap/me_normal"
                        android:id="@+id/img_me"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="5dp"/>
                <TextView
                        android:id="@+id/tv_me"
                        android:text="@string/me"
                        android:gravity="center"
                        android:textSize="@dimen/text_size_13sp"
                        android:textColor="@color/color_black"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/dp_8"
                        app:layout_constraintTop_toBottomOf="@+id/img_me"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toEndOf="parent"/>

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>